--- a/views/register.html
+++ b/views/register.html
@@ -50,16 +50,16 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
     <main>
         <h3 class="titulo-register">Registro de usuario</h3>
         <form action="/" method="POST" class="register-form">
-        <div>
+        <div class="input-container">
             <input type="text" name="nombre" id="nombre" placeholder="Nombre y apellido" required minlength="5">
         </div>
-        <div>
+        <div class="input-container">
             
             <input type="email" name="usuario" id="usuario" placeholder="Nombre de usuario" required minlength="5">
         </div>
-        <div>
+        <div class="input-container">
             <h4>Fecha de nacimiento</h4>
-            <input type="date" name="nacimiento" id="nacimiento">
+            <input type="date" name="nacimiento" id="nacimiento" >
         </div>
         <div>
             
