--- a/views/register.html
+++ b/views/register.html
@@ -47,7 +47,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css
               
     </header>
         
-    <main>
+    <main class="registerContainer">
         <h3 class="titulo-register">Registro de usuario</h3>
         <form action="/" method="POST" class="register-form">
         <div class="input-container">
